[package]
name = "runner_q"
version = "0.6.0"
edition = "2021"
authors = ["Akinlua Bolamigbe bolamigbeakinlua@gmail.com"]
description = "Redis-based activity queue and worker system"
license = "MIT"
repository = "https://github.com/alob-mtc/runnerq"
homepage = "https://github.com/alob-mtc/runnerq"
readme = "README.md"
keywords = ["queue", "redis", "worker", "async", "background-jobs"]
categories = ["asynchronous", "database", "concurrency"]

[dependencies]
async-trait = "0.1.89"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
serde_json = "1.0.143"
chrono = { version = "0.4.41", features = ["serde"] }
thiserror = "2.0.16"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
tokio-util = "0.7.16"
anyhow = "1.0"

# HTTP framework dependencies (optional)
axum = { version = "0.7", features = ["json"], optional = true }
tower-http = { version = "0.5", features = ["cors"], optional = true }
tokio-stream = { version = "0.1", features = ["sync"] }

# Redis backend dependencies (optional)
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"], optional = true }
bb8-redis = { version = "0.14", optional = true }

[features]
default = ["redis", "axum-ui"]
# Redis backend (production-ready)
redis = ["dep:redis", "dep:bb8-redis"]
# PostgreSQL backend (in development - not recommended for production)
postgres = ["dep:sqlx", "dep:async-stream"]
# Axum-based UI endpoints
axum-ui = ["dep:axum", "dep:tower-http"]

[dependencies.sqlx]
version = "0.8.6"
features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"]
optional = true

[dependencies.async-stream]
version = "0.3"
optional = true

[dev-dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json"] }
async-stream = "0.3"
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
bb8-redis = "0.14"
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
