[package]
name = "runner_q_redis"
version = "0.1.0"
edition = "2021"
authors = ["Akinlua Bolamigbe <bolamigbeakinlua@gmail.com>"]
description = "Redis storage backend for RunnerQ"
license = "MIT"
repository = "https://github.com/alob-mtc/runnerq"
readme = "README.md"
keywords = ["runnerq", "redis", "queue", "worker"]

[dependencies]
runner_q = { path = ".." }
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }
bb8-redis = "0.14"
async-trait = "0.1.89"
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
futures = "0.3"
tracing = "0.1"
tokio = { version = "1", features = ["time"] }
uuid = { version = "1.18.0", features = ["v4", "serde"] }
